[metadata]
name = putils
version = 0.1
author = Jamie Bliss
author_email = jamie@ivyleav.es
description = Utilities for Pulumi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dingbots/putils/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Topic :: System :: Systems Administration
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = putils
python_requires = >= 3.6
zip_safe = True

[flake8]
select = C,E,F,I,N,W,B,B9
ignore = E704
max-line-length = 100

import-order-style = smarkets